announcement wording improvements.