@@ -33,9 +33,9 @@ public class AnalyzePirateMissionHandler extends BaseQueryAnalyzer implements Qu
         String remainingKills = computeKillsRemaining(missions, bounties);
         String missionProfit = computeMissionProfit(missions, bounties);
         String instructions = """
-                Do not sum anything do not calculate! 
-                Just use data pre-calculated for you to answer the question. 
-                If asked about total kills remaining only return the number of kills remaining to complete all assignments. 
+                Do not sum anything do not calculate!
+                Just use data pre-calculated for you to answer the question.
+                If asked about total kills remaining only return the number of kills remaining to complete all assignments.
                 Else provide complete summary.
                 """;
         return process(new AiDataStruct(instructions, new DataDto(remainingKills, missionProfit)), originalUserInput);
@@ -59,7 +59,7 @@ public class AnalyzePirateMissionHandler extends BaseQueryAnalyzer implements Qu
         List<MissionDto> sortedMissions = missions.values().stream()
                 .filter(mission -> mission.getMissionTargetFaction() != null)
                 .sorted(Comparator.comparingLong(MissionDto::getMissionId))
-                .collect(Collectors.toList());
+                .toList();
 
         if (sortedMissions.isEmpty()) {
             return "no missions available";
